--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <style>
+  :root{
+    --toggle-color_blue:#2196F3;
+    --toggle-background:#ccc; 
+    --toggle-width:60px;
+    --toggle-height:34px;
+    --slider-size:26px;
+    --slider-left:4px;
+    --slider-bottom:4px;
+    --slider-background:#fff;
+    --transition-speed-1:400ms;
+  }
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: var(--toggle-width);
+  height: var(--toggle-height);
 }
 
 .switch input { 
@@ -23,40 +35,40 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  background-color: var(--toggle-background);
+  -webkit-transition: var(--transition-speed-1);
+  transition: var(--transition-speed-1);
 }
 
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  height: var(--slider-size);
+  width: var(--slider-size);
+  left: var(--slider-left);
+  bottom: var(--slider-bottom);
+  background-color: var(--slider-background);
+  -webkit-transition: var(--transition-speed-1);
+  transition: var(--transition-speed-1);
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: var(--toggle-color_blue);
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px var(--toggle-color_blue);
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(var(--slider-size));
+  -ms-transform: translateX(var(--slider-size));
+  transform: translateX(var(--slider-size));
 }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 34px;
+  border-radius: var(--toggle-height);
 }
 
 .slider.round:before {
